--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&family=Roboto+Mono:ital,wght@1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="https://unpkg.com/cally"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
